<resources>
    <string name="app_name">WorkoutApp</string>
    <string name="app_icon_desc">App icon</string>
    <string name="nav_home">Exercise plans</string>
    <string name="nav_summary">Summary</string>
    <string name="nav_settings">Settings</string>
    <string name="section_desc_trainings">%1$d trainings</string>
    <string name="section_time">%1$d minutes</string>
    <string name="section_1_title">ABS</string>
    <string name="section_2_title">Chest</string>
    <string name="section_3_title">Arms</string>
    <string name="section_4_title">Legs</string>
    <string name="section_5_title">Shoulders and back</string>
    <string name="settings_delete_toast">App data successfully deleted</string>
    <string name="home_title">Good Morning!</string>
    <string name="feeling_section_title">How are you</string>
    <string name="feeling_section_title_bold">" feeling today?"</string>
    <string name="feeling_ready">Ready</string>
    <string name="feeling_normal">Normal</string>
    <string name="feeling_tired">Tired</string>
    <string name="exercise_section_title">Exercise sections</string>
    <string name="exercise_section_start_button">Start</string>
    <string name="exercise_section_image_content_desc">Section Image</string>
    <string name="exercise_section_trophy_content_desc">White trophy icon</string>
    <string name="exercise_section_fire_content_desc">White fire icon</string>
    <string name="exercise_section_timer_content_desc">White timer icon</string>
    <string name="exercise_section_time" translatable="false">00:%1$d</string>
    <string name="exercise_section_time_1" translatable="false">01:0%1$d</string>
    <string name="settings_english">English</string>
    <string name="settings_polish">Polish</string>
    <string name="settings_section_1_title">General settings</string>
    <string name="settings_rest_time">Rest time between exercises</string>
    <string name="settings_keep_screen_on">Keep the screen on</string>
    <string name="settings_language">Change language</string>
    <string name="settings_clear_data">Clear app data</string>
    <string name="exercise_1_desc">Description</string>
    <string name="exercise_jumping_jacks_desc">Jump to a position with legs spread wide and hands touching above the head, then return to a position with legs together and arms at the sides of the body.\n\nThis exercise provides a full-body workout and engages all major muscle groups.</string>
    <string name="exercise_reverse_crunches_desc">Lying on your back with your knees raised and bent at a right angle, lift your lower back.\n\nIt mainly works the abdominal muscles: straight and oblique.</string>
    <string name="exercise_russian_twist_desc">Sit on the floor with your knees bent, as for tummy tucks.\n\nYour feet should be together and your arms should be straight and joined together. Twisting your torso at the waist, move your arms from one side of your body to the other.\n\nThis exercise strengthens the abdominal muscles by twisting the muscles above the pelvis.</string>
    <string name="exercise_mountain_climber_desc">Start from the starting position for the push-up, draw the right knee to the chest, jump up and change legs in the air, drawing the left knee and foot and straightening the right leg.\n\nIt strengthens many muscle groups, in addition to the cardiovascular system.</string>
    <string name="exercise_heel_touch_desc">Lie on the floor with your legs bent and your arms along your torso.\n\nLift your upper body slightly off the floor and reach your hands alternately to your heels.</string>
    <string name="exercise_leg_raises_desc">Lie on your back, place your hands at hip height for more stability.\n\nThen lift your straightened legs off the floor to vertical. Slowly lower your legs and repeat the exercise.</string>
    <string name="exercise_plank_desc">In the starting position for the push-up, with your body weight resting on your forearms, elbows and toes, endure the specified exercise time.\n\nThis exercise strengthens the abdominal muscles, back and shoulders.</string>
    <string name="exercise_side_plank_desc">Support yourself sideways on your forearm with your feet joined together. Straighten your back and hips, pointing your gaze ahead. Tighten your abdomen firmly and lift your hips upward. Hold the position without lowering your hips.\n\nThis exercise strengthens the abdominal muscles, back and shoulders.</string>
    <string name="exercise_decline_push_ups_desc">Start in a regular push-up position, but with your legs resting on a chair or bench.\n\nThen lower your body using your arm muscles. Remember that the whole body should keep a straight line.</string>
    <string name="exercise_push_ups_desc">Raising and lowering your body with your arms, keep your body straight.\n\nThis exercise works the muscles of the chest, shoulders, back, legs and triceps.</string>
    <string name="exercise_pike_push_ups_desc">Start in a regular push-up position, then lift your hips high and move your legs slightly forward.\n\nThen lower and raise your upper body.</string>
    <string name="exercise_triceps_dips_desc">Place your hands on the chair, behind your back.\n\nKeeping your back as close to the chair as possible, bend your arms at the elbows and lower yourself, trying to get down to 90 degrees. A very good exercise for the triceps.</string>
    <string name="exercise_burpees_desc">Start from a standing position. Move to a squat and place your palms on the ground.\n\nStraighten your legs and arms at the same time. Immediately return to the squat position. Jump out of the squat position.\n\nBurpee is an exercise from the aerobic category, strengthening the muscles of the whole body.</string>
    <string name="exercise_big_arm_circles_desc">Stand straight with feet shoulder-width apart. Raise and extend your arms out to the sides, without bending your elbows.\n\nSlowly rotate your arms forward, making large circles.\n\nPerform a series in one direction, then change direction, rotating backward.</string>
    <string name="exercise_side_arm_raise_desc">Stand on the floor with feet shoulder width apart.\n\nRaise your arms out to your sides to shoulder height, then lower. Repeat the exercise.</string>
    <string name="exercise_asymmetrical_push_ups_desc">Start in a push-up position with your legs extended back and your hands below your shoulders.\n\nPlace your forearm on the mat, with your elbow directly under your shoulder, and begin to bend your other elbow until your chest is just above the floor.</string>
    <string name="exercise_punches_desc">Stand with one leg in front and your knees slightly bent.\n\nBend your elbows and clench your fists in front of your face. Straighten one arm forward with the inside of your hand toward the floor.\n\nReturn to the starting position and repeat with the other hand.</string>
    <string name="exercise_inchworms_desc">Start with feet shoulder width apart.\n\nLean on your hands, then "walk" forward on them as far as you can. Return by "walking" your hands backward. Repeat the exercise.</string>
    <string name="exercise_up_down_plank_desc">Start in plank position, with your wrists under your shoulders and your feet hip-width apart.\n\nBend your left arm, place your left elbow on the mat, then bend your right arm and place your right elbow on the mat. Place your left hand on the mat, straighten your left arm, then place your right hand on the mat and straighten your right arm.\n\nChange sides and repeat this up and down movement until you complete the series.</string>
    <string name="exercise_cobra_lat_pull_down_desc">Lie on your stomach with your legs and arms fully extended.\n\nRaise your upper body, bend your shoulders and bring your shoulder blades together. Lower your upper body and straighten your arms.\n\nRepeat the movement until the series is complete.</string>
    <string name="exercise_side_hop_desc">Stand on the floor, place your arms in front of you and jump from one side to the other.</string>
    <string name="exercise_jump_squats_desc">Stand with feet shoulder-width apart and toes pointing slightly outward.\n\nBend your knees, pushing your hips back, as if you want to sit on a chair. Pushing your heels out, jump straight up. Land with your knees slightly bent and return to the squat position.Repeat until the series is complete.</string>
    <string name="exercise_raise_to_plank_desc">Start in side plank position with your right arm over your elbow, place your left foot on the chest and bend your right leg back.\n\nSqueeze the inside of your left thigh and lift your hip off the mat. Lower your hip down without letting it touch the floor, then lift it back up until your body is in a straight line.</string>
    <string name="exercise_bird_dogs_desc">Start on your hands and knees with your hands under your shoulders and your knees under your hips.\n\nExtend one leg and the opposite arm at the same time. Pause for 3 to 5 seconds, return to the starting position and change sides. Continue alternating sides until the series is complete.</string>
    <string name="exercise_donkey_kick_twist_desc">Start on your hands and knees with your hands under your shoulders and your knees under your hips, and place your right hand behind your head.\n\nExtend your left leg back and rotate your torso to the right. Bend your left leg, draw your right elbow to your left knee, and perform a step out. Repeat until you change sides.</string>
    <string name="exercise_plank_leg_extension_pulses_desc">Start in a plank position with your body in a straight line, your hands under your shoulders and your feet shoulder-width apart.\n\nExtend your left leg backward and lift it as high as possible without arching your back. Lower the leg only a few centimeters and start pulsing up and down. Return to the starting position, change legs and repeat.</string>
    <string name="exercise_fire_hydrant_desc">Kneel on your hands and knees, with your wrists under your shoulders and your knees hip-width apart.\n\nKeeping your knee bent, lift one leg up and to the side until it is at hip level. Return to the starting position and repeat the exercise until you change sides.</string>
    <string name="exercise_front_and_back_lunges_desc">Stand with feet hip-width apart, take a step forward, and then slowly bend both knees until the back knee is just above the floor.\n\nStand up, take a step back with the same leg and bend both knees until the back knee is just above the floor. Repeat this back and forth movement throughout the series, then switch legs.</string>
    <string name="exercise_t_press_desc">Lie on your stomach with your legs fully extended and your arms forming a T-shape.\n\nEngage your back muscles to lift your torso and shoulders off the mat. Spread your arms out to the sides, squeeze your shoulder blades together and stop. Return to the starting position and repeat.</string>
    <string name="exercise_bridge_overhead_desc">Lie on your back with your knees and shoulders bent and your feet flat on the floor.\n\nRaise your hips, squeeze your buttocks and extend your left arm up and across your body. Try to touch the floor just above your right shoulder. Return to the starting position and repeat on the other side.</string>
    <string name="exercise_knee_push_ups_desc">Place your knees on the floor, palms below your shoulders and cross your feet.\n\nKeeping your back straight, start bending your elbows until your chest almost touches the floor. Stop and return to the starting position. Repeat until the series is complete.</string>
    <string name="exercise_arm_swings_desc">Stand straight with your knees slightly bent, feet shoulder-width apart and arms extended horizontally to the sides.\n\nCross your arms in front, then quickly pull them back as far as possible. Repeat this movement back and forth until the series is complete.</string>
    <string name="exercise_cat_cow_pose_desc">Start in forward support, with your knees under your hips and your hands exactly under your shoulders.\n\nInhaling, push your belly down, shoulders back, and head up.\n\nMaking an exhalation, push your back up and bend your head down. Repeat the exercise.</string>
    <string name="trophy_desc">Trophy icon</string>
    <string name="finish_congratulations">Congratulations!</string>
    <string name="finish_congrats_desc">You have completed all the exercises</string>
    <string name="finish_button">Finish</string>
    <string name="bmi_scale">BMI SCALE</string>
    <string name="bmi_underweight">Underweight</string>
    <string name="bmi_normal">Normal</string>
    <string name="bmi_overweight">Overweight</string>
    <string name="bmi_obese">Obese</string>
    <string name="bmi_extreme_obese">Extreme Obese</string>
    <string name="bmi_invalid_value">Invalid BMI value</string>
    <string name="bmi_invalid_toast">Please enter valid values</string>
    <string name="bmi_edit">Edit</string>
    <string name="bmi_weight">Weight</string>
    <string name="bmi_height">Height</string>
    <string name="bmi_save">Save</string>
    <string name="bmi_cancel">Cancel</string>
    <string name="summary_trainings">Done\ntrainings</string>
    <string name="summary_kcal">Kcal\nburnt</string>
    <string name="summary_minutes">Minutes\nspent</string>
    <string name="working_half_time">Half time remaining</string>
    <string name="working_get_ready">Get Ready</string>
    <string name="working_work">Work!</string>
    <string name="back_dialog_title">Are you sure?</string>
    <string name="back_dialog_desc">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="back_dialog_yes">Yes</string>
    <string name="back_dialog_no">No</string>
    <string name="working_icon_info">Exercise info icon</string>
    <string name="working_icon_pause">Exercise pause icon</string>
    <string name="working_icon_resume">Exercise resume icon</string>
</resources>