...
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/titleBMI"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/editTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_edit"
            android:textAllCaps="true"
            android:textColor="?colorPrimary"
            android:textSize="18sp"
...
            android:layout_height="300dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultBMI" />

        <TextView
            android:id="@+id/descBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#8fc69f"
            android:textSize="18sp"
...
